syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.ilmostro.verx.grpc";
option java_outer_classname = "HelloWorldProto";
package helloworld;

// 服务定义。
service Greeter {
  // 发送请求
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 包含用户名字的请求消息
message HelloRequest {
  string name = 1;
}

// 包含请求信息的响应消息
message HelloReply {
  string message = 1;
}
